--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
 
-    <title>Whalesper</title>
+    <title>Whalesper Technology Inc.</title>
   </head>
   <body>
     <noscript>
